// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initialization should correctly initialize validator per default 1`] = `
GBFS {
  "auth": Object {},
  "gotOptions": Object {
    "headers": Object {
      "user-agent": "MobilityData GBFS-Validator/1.0.0 (Node 18.20.0)",
    },
  },
  "options": Object {
    "docked": false,
    "freefloating": false,
    "version": null,
  },
  "url": "http://localhost:8888/gbfs.json",
}
`;

exports[`initialization should correctly initialize validator with options 1`] = `
GBFS {
  "auth": Object {},
  "gotOptions": Object {
    "headers": Object {
      "user-agent": "MobilityData GBFS-Validator/1.0.0 (Node 18.20.0)",
    },
  },
  "options": Object {
    "docked": true,
    "freefloating": true,
    "version": "v2.1",
  },
  "url": "http://localhost:8888/gbfs.json",
}
`;

exports[`initialization should throw an error without url 1`] = `"Missing URL"`;

exports[`initialization with auth should correctly initialize with \`basic_auth\` 1`] = `
GBFS {
  "auth": Object {
    "basicAuth": Object {
      "password": "mypassword",
      "user": "myuser",
    },
    "type": "basic_auth",
  },
  "gotOptions": Object {
    "headers": Object {
      "Authorization": "basic bXl1c2VyOm15cGFzc3dvcmQ=",
    },
  },
  "options": Object {
    "docked": false,
    "freefloating": false,
    "version": null,
  },
  "url": "http://localhost:8888/gbfs.json",
}
`;

exports[`initialization with auth should correctly initialize with \`bearer_token\` 1`] = `
GBFS {
  "auth": Object {
    "bearerToken": Object {
      "token": "mytoken",
    },
    "type": "bearer_token",
  },
  "gotOptions": Object {
    "headers": Object {
      "Authorization": "Bearer mytoken",
    },
  },
  "options": Object {
    "docked": false,
    "freefloating": false,
    "version": null,
  },
  "url": "http://localhost:8888/gbfs.json",
}
`;

exports[`initialization with auth should correctly initialize with multiple \`headers\` 1`] = `
GBFS {
  "auth": Object {
    "headers": Array [
      Object {
        "key": "mykey",
        "value": "myvalue",
      },
      Object {
        "key": "mysecondkey",
        "value": "mysecondvalue",
      },
      Object {
        "key": "mythirdkey",
        "value": "mythirdvalue",
      },
    ],
    "type": "headers",
  },
  "gotOptions": Object {
    "headers": Object {
      "mykey": "myvalue",
      "mysecondkey": "mysecondvalue",
      "mythirdkey": "mythirdvalue",
      "user-agent": "MobilityData GBFS-Validator/1.0.0 (Node 18.20.0)",
    },
  },
  "options": Object {
    "docked": false,
    "freefloating": false,
    "version": null,
  },
  "url": "http://localhost:8888/gbfs.json",
}
`;

exports[`initialization with auth should correctly initialize with one \`headers\` 1`] = `
GBFS {
  "auth": Object {
    "headers": Array [
      Object {
        "key": "mykey",
        "value": "myvalue",
      },
    ],
    "type": "headers",
  },
  "gotOptions": Object {
    "headers": Object {
      "mykey": "myvalue",
      "user-agent": "MobilityData GBFS-Validator/1.0.0 (Node 18.20.0)",
    },
  },
  "options": Object {
    "docked": false,
    "freefloating": false,
    "version": null,
  },
  "url": "http://localhost:8888/gbfs.json",
}
`;
